# jaacountable-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.scale.yml  docker-compose.yml  main.py  pyproject.toml
.claude/agents/: .git-commit-composer.md.swp  git-commit-composer.md  github-issue-creator.md
.github/workflows/: _migrate-db.yml  ci-cd.yml  ci.yml  contract-tests.yml  deploy-production.yml  discover-gleaner-daily.yml  discover-observer-daily.yml  integration-tests.yml  unit-tests.yml
alembic/: env.py
alembic/versions/: 2025_11_13_2036-399757bac0a6_create_articles_table.py  2025_11_20_2018-59f8e37f0c42_convert_timestamps_to_timestamptz_for_.py  2025_11_21_1806-6d8635339162_add_classifications_table.py  2025_11_24_0855-4f0ee70ba9e1_create_news_sources_table.py  2025_11_24_2127-a657a4df077c_add_news_source_id_to_articles.py  2025_12_18_2026-4f51310f8125_create_entities_and_article_entities_.py  2026_01_14_1817-2532338fa858_add_public_id_to_articles.py  2026_02_18_1425-9308e63645e7_seed_jamaica_observer_news_source.py  2026_03_13_1724-471d8bf395eb_add_search_vector_to_articles.py  2026_04_10_2233-18571ff9ca84_decode_html_entities_in_article_titles.py  2026_04_11_1034-b2acd310d162_remove_duplicate_articles_from_url_.py
config/: database.py  log_config.py
gleaner_researcher_agent/: agent.py  test_gleaner_agent.py  tools.py  v1.evalset.json
plans/: Entity-Association-Plan.md  Google-ADK-Framework-Learning.md  High-Level-Plan.md  Phase-2-GitHub-Issues.md  Phase-3-Integration-Plan.md  article-search-api-design.md  entity-normalization-caching-v2.md  entity-normalization-caching.md
scripts/: create-migration.sh  create_github_issues.py  parallel_archive_discovery.py  poc_newspaper_archive.py  start-db.sh  test_insert_article.py  test_pool_health.py  validate_pipeline.py  validate_pipeline_with_caching.py  validate_rss_discovery.py
scripts/infrastructure/: README.md  clean-db.sh  compose-cold-start.sh  create-s3-buckets.sh  generate_seed.py  init-db.sh  migrate.sh  seed.sql  seed_db.sh  start-localstack.sh  start-server.sh  test-db-connection.py
scripts/production/: README.md  discover_gleaner_archive_articles.py  utils.py
scripts/testing/: benchmark_classification_models.py  parallel_archive_discovery.py  poc_newspaper_archive.py  validate_rss_discovery.py
src/: __init__.py
src/analytics/: client.py
src/article_classification/: __init__.py  base.py  converters.py  models.py  service.py  utils.py
src/article_discovery/: __init__.py  base.py  models.py  (+2 more)
tests/: __init__.py  conftest.py
(+201 files in other folders)
